Se agrego nuevo item a la lista

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <li> Docker </li>
         <li> Ansible </li>
         <li> Integración continua </li>
+        <li>Node Js</li>
     </ul>
 </body>
 
