--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <li> Ansible </li>
         <li> Integración continua </li>
         <li>Node Js</li>
+        <li>Integracion continua: madurez y productividad en el desarrolo de software</li>
     </ul>
 </body>
 
