Agregando cursos a la lista

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <li> Integración continua </li>
         <li>Node Js</li>
         <li>Integracion continua: madurez y productividad en el desarrolo de software</li>
+        <li>Kubernetes</li>
+        <li>Angular</li>
     </ul>
 </body>
 
