modificando el titulo

--- a/piloto/index.html
+++ b/piloto/index.html
@@ -20,6 +20,7 @@
         <li> Ansible </li>
         <li> Integración continua </li>
         <li>Node Js</li>
+        <li>kubernetes</li>
     </ul>
 </body>
 
