Cursos con mayuscula

--- a/piloto/index.html
+++ b/piloto/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <h1>Lista de cursos de DevOps de Alura</h1>
+    <h1>Lista de Cursos de DevOps de Alura</h1>
     <ul>
         <li>HTML</li>
         <li>CSS</li>
