Agregando descripcion a los cursos

--- a/piloto/index.html
+++ b/piloto/index.html
@@ -15,12 +15,12 @@
         <li>CSS</li>
         <li>Javascript</li>
         <li>React</li>
-        <li> Vagrant </li>
-        <li> Docker </li>
-        <li> Ansible </li>
-        <li> Integración continua </li>
+        <li> Vagrant: Gerenciando maquinas virtuales </li>
+        <li> Docker: Creando containers sin dolor de cabeza </li>
+        <li> Ansible: Su infraestructura como codigo </li>
+        <li> Integración continua y productividad en el desarrollo </li>
         <li>Node Js</li>
-        <li>kubernetes</li>
+        <li>kubernetes: Introduccion a la orquestacion de containers</li>
     </ul>
 </body>
 
